--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", HelveticaNeue, YuGothic, "Yu Gothic Medium", "Yu Gothic", Verdana, Meiryo, sans-serif;
 }
 
+.is-menuOpen body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
 ul, ol {
   list-style: none;
 }
