--- a/style.scss
+++ b/style.scss
@@ -75,8 +75,6 @@ $breakpoints: (
   }
 }
 
-
-
 //base
 html{
   font-size: $m;
@@ -88,6 +86,12 @@ html{
 body{
   line-height: 1.8;
   font-family: $yugothic;
+  .is-menuOpen &{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
 }
 //heading
 //p
@@ -102,6 +106,8 @@ a{
     text-decoration: underline;
   }
 }
+
+
 //btnなど
 .sw{
   &-pageTop{
