--- a/style.css
+++ b/style.css
@@ -1114,6 +1114,7 @@ a:hover, a:focus {
   padding: 80px 0;
   box-sizing: border-box;
   position: relative;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 768px) {
@@ -1500,6 +1501,7 @@ a:hover, a:focus {
   display: block;
   height: calc((780 / 1080) * 100vh);
   opacity: 0;
+  filter: drop-shadow(2px 2px 6px rgba(180, 180, 180, 0.7));
 }
 
 .lp-sales__innerIboxImg.is-animation {
@@ -1519,6 +1521,7 @@ a:hover, a:focus {
   padding: 80px 0;
   box-sizing: border-box;
   position: relative;
+  overflow-x: hidden;
   padding-left: 40px;
   padding-right: 40px;
   box-sizing: border-box;
@@ -1902,6 +1905,7 @@ a:hover, a:focus {
   position: relative;
   padding: 80px 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 768px) {
